<resources>
    <string name="menu_title">Меню</string>
    <string name="app_name">ALIAS</string>
    <string name="app_name_extended">па-беларуску</string>
    <string name="play_button">Пачаць</string>
    <string name="start_button">Пачаць гульню!</string>
    <string name="rules_button">Правілы</string>
    <string name="exit_button">Выхад</string>
    <string name="offline_button">Аффлайн</string>
    <string name="network_game_button">Па-сетцы</string>
    <string name="back_button">Назад</string>
    <string name="next_button">Далей</string>
    <string name="approve_button">Добра</string>
    <string name="mode_title">Рэжым</string>
    <string name="choose_mode">Абярыце рэжым</string>
    <string name="rules_title">Правілы</string>
    <string name="rules_offline_content">Неабходна патлумачыць чальцам
        сваёй каманды як мага больш слоў за адведзены час.
        Нельга выкарыстоўваць аднакарэнныя і іншамоўныя словы.
        Перамагае каманда, гульцы якой хутчэй набяруць
        зададзеную колькасць слоў.</string>
    <string name="rules_online_content">У гульні па-сетцы кожны ігрок гуляе са сваёй прылады,
        або выкарыстўоваецца адна прылада на каманду.</string>
    <string name="teams_title">Каманды</string>
    <string name="add_team">Дабавіць</string>
    <string name="delete_team">Выдаліць каманду</string>
    <string name="config_title">Налады</string>
    <string name="max_words_num_title">Колькасць словаў:</string>
    <string name="time_config_title">Час на раунд:</string>
    <string name="dictionaries_title">Катэгорыі</string>
    <string name="random_category">Рандом</string>
    <string name="easy_category">Лёгкі</string>
    <string name="easy_category_disclaimer">дубрава, алей</string>
    <string name="middle_category">Сярэдні</string>
    <string name="middle_category_disclaimer">імпеданс, дэмагогія</string>
    <string name="hard_category">Сярэдні</string>
    <string name="hard_category_disclaimer">імпеданс, дэмагогія</string>
    <string name="team_plays">Гуляе каманда</string>
    <string name="click_to_start">Націсніце каб пачаць гульню</string>
    <string name="result_label">Вынікі</string>
    <string name="guessed">Адгаданы:</string>
    <string name="skipped">Прапушчаны:</string>
    <string name="finish_game">Канец гульні!</string>
    <string name="winner_title">Перамагла каманда</string>
    <string name="back_to_main_menu">Пачаць зноў</string>
    <string name="create_game">Стварыць гульню</string>
    <string name="join_game">Далучыцца</string>
    <string name="title_game_key">Ключ да гульні</string>
    <string name="subtitle_game_key">Пакажыце ключ астатнім гульцам, каб яны маглі далучыцца</string>
    <string name="title_enter_key">Увядзіце ключ:</string>
    <string name="subtitle_enter_key">Ключ можна даведацца ў стваральніка</string>
    <string name="toolbar_title_mode">Рэжым</string>
    <string name="toolbar_title_rules">Правілы</string>
    <string name="toolbar_title_teams">Каманды</string>
    <string name="toolbar_title_configurations">Налады</string>
    <string name="toolbar_title_dictionaries">Катэгорыі</string>
    <string name="toolbar_title_result">Вынікі</string>
    <string name="next_team">Наступная каманда!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
