<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_mode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.242"
            android:textSize="24sp" android:id="@+id/textView2"/>

    <Button
            android:text="@string/offline_button"
            android:layout_width="266dp"
            android:layout_height="52dp" android:id="@+id/button_exit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onOfflineClicked"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="56dp"
            app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/network_game_button"
            android:layout_width="266dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintTop_toBottomOf="@+id/button_offline" android:layout_marginTop="28dp"/>
    <Button
            android:text="@string/cancel_button"
            android:layout_width="266dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="264dp"
            app:layout_constraintTop_toBottomOf="@+id/button_network" app:layout_constraintVertical_bias="1.0"
            android:onClick="onCancelClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>