<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"
             android:id="@+id/result_action_bar"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/guessed"
              android:id="@+id/text_view_guessed"
              app:layout_constraintTop_toBottomOf="@id/result_action_bar"
              android:layout_marginTop="24dp"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/text_view_guessed_num"
              app:layout_constraintLeft_toRightOf="@id/text_view_guessed"
              android:layout_marginLeft="108dp"
              app:layout_constraintTop_toBottomOf="@+id/result_action_bar" android:layout_marginTop="24dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/skipped"
              android:id="@+id/text_view_skipped"
              app:layout_constraintTop_toBottomOf="@id/text_view_guessed"
              android:layout_marginTop="24dp"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/text_view_skipped_num"
              app:layout_constraintLeft_toRightOf="@id/text_view_skipped"
              android:layout_marginLeft="88dp" android:layout_marginStart="88dp"
              app:layout_constraintTop_toBottomOf="@+id/text_view_guessed_num" android:layout_marginTop="24dp"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"

              android:id="@+id/text_view_general_result"
              app:layout_constraintTop_toBottomOf="@id/text_view_skipped"
              android:layout_marginTop="24dp"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/text_view_general_result_num"
              app:layout_constraintLeft_toRightOf="@id/text_view_general_result"
              android:layout_marginLeft="76dp"
              app:layout_constraintTop_toBottomOf="@+id/text_view_skipped_num"
              android:layout_marginTop="24dp"/>
    <ListView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/passed_words_list"
              app:layout_constraintTop_toBottomOf="@id/text_view_general_result"
              android:layout_marginTop="24dp"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/next_button"
            android:id="@+id/button_next_result"
            android:background="@drawable/btn_rounded_corner"
            android:layout_width="266dp"
            android:layout_height="63dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:onClick="onClick" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>