<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/team_plays"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="24dp"
              android:textSize="14sp"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/text_view_team_plays"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/text_view_team_name"
              app:layout_constraintTop_toTopOf="@id/text_view_team_plays"
              android:layout_marginTop="24dp"
              android:textSize="16sp"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/timer"
              app:layout_constraintTop_toBottomOf="@id/text_view_team_name"
              android:layout_marginTop="12dp"
              android:textSize="16sp"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent"/>
    <Button android:layout_width="243dp" android:layout_height="274dp"
            android:id="@+id/start_game"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/click_to_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_team_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClick"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:textSize="24sp"
              android:id="@+id/word" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton android:layout_width="52dp" android:layout_height="52dp"
                 android:id="@+id/button_skip"
                 android:background="@drawable/ic_close"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
                 app:layout_constraintTop_toBottomOf="@+id/start_game" android:layout_marginTop="24dp"
                 android:onClick="onClick"/>
    <ImageButton android:layout_width="52dp" android:layout_height="52dp"
                 android:id="@+id/button_accept"
                 android:background="@drawable/ic_accept"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginRight="48dp" android:layout_marginEnd="48dp"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/start_game"
                 android:onClick="onClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>