<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <include layout="@layout/action_bar"
             android:id="@+id/config_action_bar"/>
    <TextView
            android:text="@string/max_words_num_title"
            android:id="@+id/text_view_max_words_num"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="107dp"
            app:layout_constraintTop_toBottomOf="@id/config_action_bar"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView

            android:id="@+id/text_view_cur_words_num"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="107dp"
            app:layout_constraintTop_toBottomOf="@id/config_action_bar"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="48dp" android:layout_marginEnd="24dp"/>
    <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/seekbar_words"
             tools:layout_editor_absoluteY="105dp" tools:layout_editor_absoluteX="0dp"
             android:max="@integer/max_words_num"
             android:progress="60"
             app:layout_constraintTop_toBottomOf="@id/text_view_max_words_num"
             android:layout_marginTop="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="24dp"/>
    <TextView
            android:text="@string/time_config_title"
            android:id="@+id/text_view_time"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/seekbar_words"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:id="@+id/text_view_cur_time"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/seekbar_words"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="48dp" android:layout_marginEnd="24dp"
    />
    <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/seekbar_time"
             tools:layout_editor_absoluteY="105dp" tools:layout_editor_absoluteX="0dp"
             android:max="@integer/max_game_time"
             android:progress="60"
             app:layout_constraintTop_toBottomOf="@id/text_view_time"
             android:layout_marginTop="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="24dp"/>
    <Button
            android:text="@string/next_button"
            android:id="@+id/button_next_config"
            android:background="@drawable/btn_rounded_corner"
            android:layout_width="266dp"
            android:layout_height="63dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>